# OTUS_HOMEWORK_6

./: .travis.yml  CMakeLists.txt  homework_6.cpp  homework_6.h  lazy_matrix.h  matrix.cpp  otus_hw_6_test.cpp  process.cpp  process.h  smart_cell.h
